# MongoDB

./: .env.example  README.md  pyproject.toml
scripts/: ping.py  settings.py
